--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
     - pip install coverage
     - pip install coveralls
     - pip install flake8
-    - pip install -r requirements.txt
+    - pip install -r requirement.txt
 
 # a list of commands to run before the main script
 before_script:
